Move render out of concern methods, fix/update passing in year through view

--- a/app/views/communities/sections/electricity/capacity/_capacity_chart.html.haml
+++ b/app/views/communities/sections/electricity/capacity/_capacity_chart.html.haml
@@ -8,7 +8,7 @@
   data: {
     controller: "fuel-chart summary-frame",
     fuel_chart: {
-      url_value: capacity_yearly_community_charts_path(@community),
+      url_value: capacity_yearly_community_charts_path(@community, year: selected_year),
       chart_type_value: "pie",
       base_title_value: base_title,
       options_value: chart_options.to_json,
