--- a/app/views/grids/sections/electricity/capacity/_capacity_chart.html.haml
+++ b/app/views/grids/sections/electricity/capacity/_capacity_chart.html.haml
@@ -8,7 +8,7 @@
   data: {
     controller: "fuel-chart summary-frame",
     fuel_chart: {
-      url_value: capacity_yearly_grid_charts_path(@grid),
+      url_value: capacity_yearly_grid_charts_path(@grid, year: selected_year),
       chart_type_value: "pie",
       base_title_value: base_title,
       options_value: chart_options.to_json,
