--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -2,6 +2,7 @@
   = image_tag "aedg-logo.png", alt: "AEDG Logo", class: "img-fluid mb-5 w-50"
 
   %h2.mb-5.fw-bold Energy Data for Alaska Communities
+  = render 'search'
 
   .row.justify-content-center.g-4
     .col-md-4.d-flex
