Add Bulk Fuel views to display map button and data

--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -19,6 +19,8 @@
         %li= nav_link "Production", "#production"
       - if @community.show_capacity?
         %li= nav_link "Capacity", "#capacity"
+      - if @community.show_bulk_fuel_facilities?
+        %li= nav_link "Bulk Fuel", "#bulk-fuel"
       - if @community.show_sales_revenue_customers?
         %li= nav_link "Sales, Revenue & Customers", "#sales-revenue-customers"
       // Prices Section
