Change bulk fuel text to bulk fuel facilites, add map layer button, display data, and capacity by fuel type chart

--- a/app/views/communities/sections/electricity/bulk_fuel_facilities/_bulk_fuel_data.html.haml
+++ b/app/views/communities/sections/electricity/bulk_fuel_facilities/_bulk_fuel_data.html.haml
@@ -4,12 +4,12 @@
       %tr
         %th Facility Name
         %th Number of Tanks
-        %th Total Capacity (gallons)
-        %th Gasoline Capacity (gallons)
-        %th Diesel Capacity (gallons)
-        %th Av Gas Capacity (gallons)
-        %th Jet Fuel Capacity (gallons)
-        %th Other Fuel Capacity (gallons)
+        %th Total Capacity (gal)
+        %th Gasoline Capacity (gal)
+        %th Diesel Capacity (gal)
+        %th Av Gas Capacity (gal)
+        %th Jet Fuel Capacity (gal)
+        %th Other Fuel Capacity (gal)
         %th Barge Delivery
         %th Plane Delivery
         %th Road Delivery
