--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -20,7 +20,7 @@
       - if @community.show_capacity?
         %li= nav_link "Capacity", "#capacity"
       - if @community.show_bulk_fuel_facilities?
-        %li= nav_link "Bulk Fuel", "#bulk-fuel"
+        %li= nav_link "Bulk Fuel Facilities", "#bulk-fuel-facilities"
       - if @community.show_sales_revenue_customers?
         %li= nav_link "Sales, Revenue & Customers", "#sales-revenue-customers"
       // Prices Section
