create community list turbo frame to render under simple serach on any page

--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -13,4 +13,4 @@
               = render 'static_pages/search'
             / --- COMMUNITY LIST ---
             #allCommunities
-              = render 'community_list', communities: @communities
+              = render 'communities/communities_list', communities: @communities
