--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -3,8 +3,8 @@
 
   %h2.mb-5.fw-bold Energy Data for Alaska Communities
   = render 'search'
-
-  .row.justify-content-center.g-4
+  
+  .row.justify-content-center.g-4.mt-2
     .col-md-4.d-flex
       = link_to user_guide_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
         .mb-2
