--- a/app/views/communities/_communities_list.html.haml
+++ b/app/views/communities/_communities_list.html.haml
@@ -8,14 +8,9 @@
     - active = (params[:letter] == ch)
     = link_to ch, communities_path(params.permit!.to_h.merge(letter: ch)),
       class: "btn btn-sm #{active ? 'btn-secondary' : 'btn-outline-secondary'}"
+/ Community list
+= render 'communities_list_frame', communities: communities
 
-/ Plain 3-column list, no grouping headers
-.container-lg.py-3
-  .row.row-cols-3.row-cols-md-4.row-cols-lg-6.justify-content-center
-    - @communities.each do |c|
-      .col.g-0
-        = link_to c.name, community_path(c), class: "text-decoration-none d-block text-truncate"
-        %hr
 / Empty state
-- if @communities.blank?
+- if communities.blank?
   %p.text-muted.text-center.mt-4 No communities found.
