clean advance search page design, add button to view community, add badges for house, senante dist. seperate out advance.html to partcials to simplify for readablitiy. clean controller and add helper for searches conrtoller. remove yellow shadow from home page (hero gradient in css

--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -10,7 +10,7 @@
               .d-flex.justify-content-center
             / --- SEARCH BAR just under title ---
             .mx-1.mb-1
-              = render 'static_pages/search'
+              = render 'searches/simple_search'
             / --- COMMUNITY LIST ---
             #allCommunities
               = render 'communities/communities_list', communities: @communities
