--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -289,3 +289,26 @@
   scroll-margin-top: 8vh; /* position anchor below nav  */
 }
 
+.pagy-bootstrap-nav {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+
+  .pagination {
+    margin-bottom: 0;
+    .page-link {
+      padding: 0.25rem 0.6rem;
+      font-size: 0.85rem;
+      color: #198754; // Bootstrap success green
+      border: 1px solid #dee2e6;
+      &:hover {
+        background-color: #e9f7ef;
+      }
+    }
+    .page-item.active .page-link {
+      background-color: #198754;
+      border-color: #198754;
+      color: #fff;
+    }
+  }
+}
