move css to scss file, move sql logic from controller to model, add before action for simple search. fix simple serach results render

--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -12,5 +12,5 @@
             .mx-1.mb-1
               = render 'searches/simple_search'
             / --- COMMUNITY LIST ---
-            #allCommunities
+            = turbo_frame_tag 'allCommunities' do
               = render 'communities/communities_list', communities: @communities
