hide map on small screens grid page

--- a/app/views/grids/show.html.haml
+++ b/app/views/grids/show.html.haml
@@ -23,7 +23,7 @@
   })
 }
   / LEFT: Map
-  .col-md-5
+  .col-md-5.d-none.d-md-block
     .d-flex.flex-column{ style: "position: sticky; top: 50px; height: calc(100vh - 50px);" }
       .flex-grow-1.d-flex.flex-column#mapbox-area
         / --- Floating controls (top-right, inside map)
