Add first pass at handling alternate search
The idea here is if we search for a dataset and no results are found
then assume the user might be looking for a community. If the search
results comes back with a community then provide a link to it.

Signed-off-by: Will Fisher <whfisher@alaska.edu>

--- a/app/views/metadata/search.html.haml
+++ b/app/views/metadata/search.html.haml
@@ -24,8 +24,15 @@
               = filters_applied ? 'Search Results' : 'All Datasets'
               %small.ms-2.text-secondary= "#{pluralize(@metadata.size, 'dataset')} found"
           = render partial: 'metadata', collection: @metadata, as: :metadatum
-        - else 
+        - else
           %p.text-center.text-muted.fs-5.mt-5
-            No results found.
+            No datasets found.
             %br/
             Try adjusting your search or using different keywords
+
+            - if @community.present?
+              %br/
+              %p.text-center.fs-5.mt-5
+                Did you mean to search for this community?
+                %br/
+                = link_to @community.to_s, @community
